# yt-archiver

./: build_prod_docker.py  my-ubol-filters.txt
chrome-extension/: content.css  content.js  manifest.json  popup.html  popup.js
yt-archiver-backend/: .dockerignore  .gitignore  Dockerfile  README.md  docker_run.py  pyproject.toml
yt-archiver-backend/app/: __init__.py  config.py  database.py  exceptions.py  logging_config.py  main.py
yt-archiver-backend/app/models/: channel.py  video.py
yt-archiver-backend/app/repositories/: channel_repository.py  video_repository.py
yt-archiver-backend/app/routers/: channel_router.py  search_router.py  video_router.py
yt-archiver-backend/app/schemas/: channel.py  common.py  video.py
yt-archiver-backend/app/services/: channel_service.py  download_manager.py  video_service.py  ytdlp_service.py
yt-archiver-backend/app/utils/: url_sanitizer.py
yt-archiver-backend/frontend-build/: index.html
yt-archiver-backend/runtime/config/: dev.yaml  docker.yaml  prod.yaml
yt-archiver-frontend/: .gitignore  index.html  package-lock.json  package.json  remove_unused.py  vite.config.js
yt-archiver-frontend/public/: manifest.json  sw.js
yt-archiver-frontend/public/css/: main.css
yt-archiver-frontend/src/: App.jsx  global.css  main.jsx  routes.jsx
yt-archiver-frontend/src/components/: ChannelAvatar.jsx  DownloadQueueModal.jsx  StatsForNerdsOverlay.jsx  TopBar.jsx  VideoCard.jsx  VideoGrid.jsx  VideoPlayer.jsx
yt-archiver-frontend/src/components/scrollbar/: scrollbar.jsx  styles.css
yt-archiver-frontend/src/hooks/: routerHooks.jsx  useDebouncedEffect.jsx
yt-archiver-frontend/src/layouts/: MainLayout.jsx
yt-archiver-frontend/src/layouts/simple/: simple.layout.jsx
yt-archiver-frontend/src/pages/: AddVideoPage.jsx  ChannelPage.jsx  HomePage.jsx  SearchPage.jsx  WatchPage.jsx
yt-archiver-frontend/src/services/: api.js  axios.instance.js
yt-archiver-frontend/src/theme/: create-theme.js  theme-provider.jsx
yt-archiver-frontend/src/theme/core/: colors.json  components.jsx  custom-shadows.js  palette.js  shadows.js  typography.js
yt-archiver-frontend/src/utils/: config-nav-dashboard.jsx  config-vars.js  constants.js  csv.js  date.js  format.js  formatter.js  helpers.js  variant.js
(+1 files in other folders)
