[project]
name = "yt-archiver-backend"
version = "0.1.0"
description = "Self-hosted YouTube archiving platform backend"
requires-python = ">=3.10"
dependencies = [
    "annotated-doc>=0.0.2",
    "annotated-types>=0.6.0",
    "anyio>=3.6.2",
    "certifi>=2025.1.31",
    "charset-normalizer>=3.4.1",
    "click>=8.1.8",
    "dnspython>=2.7.0",
    "exceptiongroup>=1.3.0",
    "fastapi>=0.115.8",
    "gunicorn>=23.0.0",
    "h11>=0.14.0",
    "httptools>=0.6.4",
    "idna>=3.10",
    "packaging>=24.2",
    "pydantic>=2.10.6",
    "pydantic-core>=2.27.2",
    "pymongo>=4.11.1",
    "python-dotenv>=1.0.1",
    "pyyaml>=6.0.2",
    "requests>=2.32.3",
    "starlette>=0.45.3",
    "structlog>=25.1.0",
    "typing-extensions>=4.12.2",
    "typing-inspection>=0.4.0",
    "urllib3>=2.3.0",
    "uvicorn>=0.34.0",
    "uvloop>=0.21.0",
    "watchfiles>=1.0.4",
    "websockets>=14.2",
    "yt-dlp>=2025.2.19",
    "yt-dlp-ejs>=0.1.0",
]

[project.optional-dependencies]
dev = [
    "httpx>=0.28.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "ruff>=0.8.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
